test/files/run/splain.check
newSource1.scala:13: error: implicit error;
!I e: II
ImplicitChain.g invalid because
!I impPar3: I1
⋮
――ImplicitChain.i1 invalid because
  !I impPar7: I3
  implicitly[II]
            ^
newSource1.scala:6: error: type mismatch;
  L|R
  f(new L)
    ^
newSource1.scala:7: error: implicit error;
!I e: F[Arg]

  implicitly[F[Arg]]
            ^
newSource1.scala:4: error: implicit error;
!I ec: ExecutionContext
  Cannot find an implicit ExecutionContext. You might add
  an (implicit ec: ExecutionContext) parameter to your method.

  The ExecutionContext is used to configure how and on which
  thread pools asynchronous tasks (such as Futures) will run,
  so the specific ExecutionContext that is selected is important.

  If your application does not define an ExecutionContext elsewhere,
  consider using Scala's global ExecutionContext by defining
  the following:

  implicit val ec: scala.concurrent.ExecutionContext = scala.concurrent.ExecutionContext.global

  long
  ^
newSource1.scala:10: error: implicit error;
!I e: String
f invalid because
!I impPar4:
  List[
    (
      VeryLongTypeName ::::
      VeryLongTypeName ::::
      VeryLongTypeName ::::
      VeryLongTypeName
    )
    ::::
    (Short :::: Short) ::::
    (
      VeryLongTypeName ::::
      VeryLongTypeName ::::
      VeryLongTypeName ::::
      VeryLongTypeName
    )
    ::::
    VeryLongTypeName ::::
    VeryLongTypeName ::::
    VeryLongTypeName ::::
    VeryLongTypeName
  ]
  implicitly[String]
            ^
